[workspace]
resolver = "2"
members = ["crates/reanim_parser", "crates/reanim_renderer", "crates/reanim_makefile_gen"]

[package]
name = "pvz-reanim"
version = "0.1.0"
edition = "2021"

[dependencies]
reanim_parser = { path = "crates/reanim_parser" }
reanim_renderer = { path = "crates/reanim_renderer" }
reanim_makefile_gen = { path = "crates/reanim_makefile_gen" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rayon = "1"
